# Planning_Control

./: .gitignore  CMakeLists.txt  LICENSE  README.md
control/cpp/: optimal_control_problem.h
control/python/: controller.py  mpc.py
controller/cpp/: nolinear_model_predictive_control.h  optimal_control_problem.h
controller/python/: controller.py  mpc.py  pid.py
envs/: gridmap.py  shapemap.py  shapemap_decomp.py
envs/maps/: circles_obstacles.npz
models/: geometry_utils.py  kinematic_car.py  model.py  super_quadric.py
models/cpp/: base_robot.h  differential_robot.h
models/python/: differential_car.py  geometry_utils.py  geometry_utils_test.py  kinematic_car.py  model.py  super_quadric.py
planner/path_generator/: astar.py  path.py  path_manager.py
planner/trajectory_generator/: CMakeLists.txt  bspline.py  bspline_evaluation.py  bspline_interpolate.py  spline_interpolate.py
planner/trajectory_generator/bspline/: CMakeLists.txt
planner/trajectory_generator/bspline/include/bspline_opt/: bspline_optimizer.h_back  gradient_descent_optimizer.h  lbfgs_lite.hpp
planner/trajectory_generator/bspline/src/: bspline_optimizer.cpp_back  uniform_bspline.cpp
planner/trajectory_generator/traj_utils/: CMakeLists.txt
planner/trajectory_generator/traj_utils/include/traj_utils/: plan_container.h_back  planning_visualization.h  polynomial_traj.h
planner/trajectory_generator/traj_utils/msg/: Bspline.msg
planner/trajectory_generator/traj_utils/src/: planning_visualization.cpp
planning/path_generator/: astar.py  path.py
planning/trajectory_generator/: constant_speed_generator.h  constant_speed_test.cpp  spline_interpolate.py  types.h
planning/trajectory_generator/tinyspline/: CMakeLists.txt
sensors/: laser.py  laser_anyshape.py  sensor.py
test/: calc_dist_to_superellipse.py  diff_servo.py  generate_spline.py  gridmap_anyshape_test.py  gridmap_astar.py  laser_attractive_point.py  laser_attractive_point_whole.py  minisnap_traj.py  motion_planning.py  osqp_dft_traj.py  qp_spline_path_optimizer.md  sdf_test.py  spline_interpolate_mine.py  spline_interpolate_test.py  spline_optimization.py  spline_optimization_circle_casadi.py  spline_optimization_superellipse_casadi.py  trajectory_optimization_casadi.py
test/test_func/: tangent_point_on_circle.py
test/travel_position/: backup.py  laser_attractive_point_whole.py  main.py  path_manager.py
utils/: util.py
